# Code-risk-Analyzer

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: pyproject.toml
Backend/alembic/: env.py
Backend/backend/: config.py
Backend/backend/app/routes/: frontend_analytics.py
Backend/backend/app/services/: ai_review.py  dashboard_services.py  rule_base_analysis.py  scorer.py  static_analysis.py
alembic/versions/: 32169ee513c9_add_some_column.py  5ccfb91de05d_initial_schema.py
backend/: config.py
backend/app/database/: session.py
backend/app/models/: models.py
backend/app/routes/: webhook.py
backend/app/services/: database_service.py  github_services.py  rule_base_analysis.py  scorer.py  static_analysis.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: Loading.jsx  RecentActivity.jsx  RiskBadge.jsx  RiskDistributionChart.jsx  StatCard.jsx  TopRiskyTable.jsx
frontend/src/pages/: AnalysisDetail.jsx  Dashboard.jsx
frontend/src/utils/: format.js
